# pythonplayground

./: .buildinfo  .flake8  MANIFEST.in  Makefile  README.md  genindex.html  index.html  objects.inv  py-modindex.html  requirements.txt  requirements_dev.txt  search.html  searchindex.js  setup.cfg
.doctrees/: index.doctree
.doctrees/apisource/: modules.doctree  pythonplayground.doctree
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  code-fix.yml  documentation.yml  feature-request.yml  questions-help-support.yml
.github/workflows/: build_documentation.yml  check_style.yml  pull_request.yml  release.yml  test.yml
_modules/: index.html
_modules/pythonplayground/: example.html
_sources/: index.rst.txt
apisource/: modules.html  pythonplayground.html
docs/: Makefile
docs/source/: conf.py  index.rst
docs/source/apisource/: modules.rst  pythonplayground.rst
src/pythonplayground/: example.py
tests/: conftest.py  test_example.py
