[metadata]
name = pythonplayground
version = file: VERSION
author = Martin van der Schelling
author_email = M.P.vanderSchelling@tudelft.nl
description = Testing playground package for Python and GitHub
long_description = file: README.md
long_description_content_type = text/markdown
keywords = testin, python, github
url = https://github.com/mpvanderschelling
license = MIT License
license_files = file: LICENSE
classifiers =
	Development Status :: 4 - Beta
	Environment :: Console
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Physics
    License :: OSI Approved :: MIT License
	Natural Language :: English
	Programming Language :: Python :: 3
	
[options]
package_dir=
    =src
packages=find:
include_package_data = True
python_requires = >=3.6
install_requires = file: requirements.txt
	
[options.packages.find]
where=src

[tool:pytest]
pythonpath = . src
minversion = 6.0
testpaths =
    tests